--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,4 +4,15 @@
     font-size: 20px !important;
     font-weight: 600;
   }
+
+  #fur-title {
+    font-size: 25px;
+  }
+
+  #fur-version {
+    font-style: italic;
+    font-size: 12px;
+    display: block;
+    color: grey;
+  }
 </style>
