Change font family to Inter

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,4 +1,15 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
 <style>
+
+  body, html, div, span, p, h1, h2, h3, h4, h5, h6, 
+  button, input, textarea, select, label {
+    font-family: "Inter", sans-serif ;
+    font-optical-sizing: auto;
+  }
+
   /* Title */
   .sidebar-header div a {
     font-size: 20px !important;
