--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -37,4 +37,18 @@
     border-right-width: 1px;
   }
 
+  #storybook-explorer-tree .sidebar-item > button > div > svg {
+    visibility: hidden;
+  }
+
+  #storybook-explorer-tree .sidebar-item > button > div::before {
+    content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><path fill='currentColor' d='m28.504 8.136l-12-7a1 1 0 0 0-1.008 0l-12 7A1 1 0 0 0 3 9v14a1 1 0 0 0 .496.864l12 7a1 1 0 0 0 1.008 0l12-7A1 1 0 0 0 29 23V9a1 1 0 0 0-.496-.864M16 3.158L26.016 9L16 14.842L5.984 9ZM5 10.74l10 5.833V28.26L5 22.426Zm12 17.52V16.574l10-5.833v11.685Z'/></svg>");
+    color: #999999;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    vertical-align: middle;
+    transform: translate(34px, 0px);
+  }
+
 </style>
